--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
     <p><strong>Achievements:</strong> Achieved 3rd Rank in Degree Final Exams</p>
 
     <div class="download-buttons">
-        <a href="https://drive.google.com/file/d/1T_cPZR2ySLtN5_IGPmAyZa70npvJNa6a/view?usp=sharing" target="_blank">
+        <a href="https://github.com/kishorsankaran/kishorsankaran.github.io/blob/f56df9d1bb44be9d22a45ac1a1e05074c4c55a17/Kishor_Sankaran_Resume.pdf">
             Download Resume
         </a>
         <a href="https://drive.google.com/file/d/1jd1k-JT2GyRI8IyuiRZp2duQUHOQEUIb/view?usp=sharing" target="_blank">
