--- a/index.html
+++ b/index.html
@@ -453,13 +453,13 @@
     <p><strong>Achievements:</strong> Achieved 3rd Rank in Degree Final Exams</p>
 
     <div class="download-buttons">
-        <https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Resume.pdf">
-            Download Resume
-        </a>
-        <https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Portfolio.pdf">
-            Download Portfolio
-        </a>
-    </div>
+    <a href="https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Resume.pdf" target="_blank">
+        Download Resume
+    </a>
+    <a href="https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Portfolio.pdf" target="_blank">
+        Download Portfolio
+    </a>
+</div>
 
     <h3 id="blogs">Blogs</h3>
     <div style="text-align: center; margin-top: 20px;">
