--- a/index.html
+++ b/index.html
@@ -453,10 +453,10 @@
     <p><strong>Achievements:</strong> Achieved 3rd Rank in Degree Final Exams</p>
 
     <div class="download-buttons">
-    <a href="https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Resume.pdf" target="_blank">
+    <a href="https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Resume.pdf">
         Download Resume
     </a>
-    <a href="https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Portfolio.pdf" target="_blank">
+    <a href="https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Portfolio.pdf">
         Download Portfolio
     </a>
 </div>
