--- a/index.html
+++ b/index.html
@@ -453,11 +453,11 @@
     <p><strong>Achievements:</strong> Achieved 3rd Rank in Degree Final Exams</p>
 
     <div class="download-buttons">
-    <a href="resume-viewer.html" target="_blank">
-        View Resume
+    <a href="https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Resume.pdf" target="_blank">
+        Download Resume
     </a>
-    <a href="portfolio-viewer.html" target="_blank">
-        View Portfolio
+    <a href="https://raw.githubusercontent.com/kishorsankaran/kishorsankaran.github.io/main/Kishor_Sankaran_Portfolio.pdf" target="_blank">
+        Download Portfolio
     </a>
 </div>
 
