--- a/index.html
+++ b/index.html
@@ -287,7 +287,8 @@
         <a href="#hobbies-interests">Hobbies & Interests</a>
         <a href="#qualification">Qualification</a>
         <a href="#blogs">Blogs</a>
-        <a href="#contact">Contact</a> </div>
+        <a href="#contact">Contact</a> 
+        <a href="#blogs">Go to Downloads</a> </div>
 
     <h1>Kishor Sankaran - Document Management Expert</h1>
 
