--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
         <a href="#qualification">Qualification</a>
         <a href="#blogs">Blogs</a>
         <a href="#contact">Contact</a> 
-        <a href="#Downloads">Go to Downloads</a> </div>
+        <a href="#downloads-section">Go to Downloads</a> </div>
 
     <h1>Kishor Sankaran - Document Management Expert</h1>
 
