--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
     <div class="section-box">
         <h3 id="work-experience">Work Experience</h3>
         <div class="section-content skills-content">
-            <div class="work-experience-box"><p>2023-Present</p><p>Document Controller</p><p>Va Tech Wabag Ltd</p></div>
+            <div class="work-experience-box"><p>2023-Present</p><p>Handover Document Controller</p><p>VA Tech Wabag Ltd</p></div>
             <div class="work-experience-box"><p>2023</p><p>Document Controller</p><p>KEO International Consultants</p></div>
             <div class="work-experience-box"><p>2023</p><p>Document Controller</p><p>China Railway Construction Coporation</p></div>
             <div class="work-experience-box"><p>2022</p><p>Document Controller</p><p>Continental Mercantile Coporation</p></div>
