--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
         <div class="section-content skills-content">
             <div class="skills-box">
                 <p><strong>Design & Build Contract for Rehabilitation of Doha South</strong></p>
-                <p>Contractor: Va Tech Wabag Limited</p>
+                <p>Contractor: VA Tech Wabag Limited</p>
                 <p>Client: Public Works Authority (PWA)</p>
                 <p>Consultant: Parsons International Limited</p>
             </div>
