--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <div class="work-experience-box"><p>2023-Present</p><p>Handover Document Controller</p><p>VA Tech Wabag Ltd</p></div>
             <div class="work-experience-box"><p>2023</p><p>Document Controller</p><p>KEO International Consultants</p></div>
             <div class="work-experience-box"><p>2023</p><p>Document Controller</p><p>China Railway Construction Coporation</p></div>
-            <div class="work-experience-box"><p>2022</p><p>Document Controller</p><p>Continental Mercantile Coporation</p></div>
+            <div class="work-experience-box"><p>2021-2022</p><p>Document Controller</p><p>Continental Mercantile Coporation</p></div>
             <div class="work-experience-box"><p>2012-2020</p><p>Document Controller</p><p>QBS International WLL</p></div>
             <div class="work-experience-box"><p>2008-2012</p><p>Document Controller</p><p>Baytur Construction & Contracting Comapany</p></div>
             <div class="work-experience-box"><p>2004-2008</p><p>Administrative Executive</p><p>Kamlesh Plastics</p></div>
