--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
         <div class="recommendation-item" data-aos="fade-up" data-aos-delay="100">
             <div class="recommender-info">
                 <h4>John Mitchell</h4>
-                <p class="recommender-title">Projects Director, Ciall Consulting</p>
+                <p class="recommender-title">Ciall Consulting</p>
             </div>
             <blockquote class="recommendation-text">
                 "I was employed as a Projects Director by Messrs QBS in Qatar for several projects including commencing in 2014 through to the end of 2016. Mr Sankaran was employed to manage the office administration and document control for the company’s flagship projects. I got to know Kishor very well during this time and found him to be extremely capable, diligent and efficient. He showed a great understanding of the company’s site management systems and the interaction with the wider company systems and those of the Supervision Consultants and Project Management Consultants employed by the Client. His department was subject to numerous audits, internally and externally, and were always confirmed to be of the highest standards. He is a very personable and gets on very well with his colleagues. He has all the technical and administrative skills required for this type of work. I would have no hesitation in recommending Kishor for any similar role and consider that he talents were underutilized and is capable of taking on much more responsibility. I commend him without reservation."
