--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
 
             <div class="skills-box" data-aos="fade-up" data-aos-delay="800">
                 <p><strong>Qatar National Convention Centre (QNCC)</strong></p>
-                <p>Contractor: Baytur Construction & Contrating Company</p>
+                <p>Contractor: Baytur Construction & Contracting Company</p>
                 <p>Client: Qatar Petroleum</p>
                 <p>Project Management: ASTAD and KEO International</p>
             </div>
