--- a/index.html
+++ b/index.html
@@ -477,31 +477,40 @@
             <div class="skills-box" data-aos="fade-up" data-aos-delay="200">
                 <p><strong>MS Excel</strong></p>
                 <ul>
-                    <li>Task automation using Macros, Power Query, and VBA</li>
-                    <li>Building formulas</li>
-                    <li>Creating reports with Pivot Tables & Slicers</li>
-                    <li>Data Formatting</li>
+                <li>Designed and implemented complex task automation solutions using VBA Macros and Power Query, reducing manual data processing time.</li>
+                <li>Developed dynamic reports and dashboards with Pivot Tables and Slicers for efficient data analysis and stakeholder reporting.</li>
+                <li>Mastered advanced formula creation for sophisticated data manipulation and analysis.</li>
+                <li>Ensured data integrity and enhanced readability through precise data formatting and validation techniques.</li>
                 </ul>
             </div>
 
             <div class="skills-box" data-aos="fade-up" data-aos-delay="300">
                 <p><strong>Aconex</strong></p>
                 <ul>
-                    <li>Process mapping and flowcharts</li>
-                    <li>Workflow creation and management</li>
-                    <li>Uploading and revising (superseding) multiple documents</li>
-                    <li>Tracking document changes and creating reports</li>
-                    <li>Mailing (distribution) groups</li>
+		<li>Expertly managed end-to-end document lifecycles on Aconex, ensuring project compliance.</li>
+                <li>Developed and optimized complex workflow configurations and process maps to streamline document review and approval cycles.</li>
+                <li>Proficient in mass uploading and superseding documents, maintaining version control and audit trails for critical project documentation.</li>
+                <li>Generated comprehensive reports on document status, overdue items, and communication flows to support project management decisions.</li>
                 </ul>
             </div>
 
             <div class="skills-box" data-aos="fade-up" data-aos-delay="400">
                 <p><strong>Computer Database</strong></p>
                 <ul>
-                    <li>Maintain a computer database of all filed documentation that ensures fast retrieval of documents.</li>
-                    <li>Develop and maintain a filing system and computer database for all documents.</li>
+                <li>Designed and maintained robust digital filing systems and comprehensive computer databases for rapid document retrieval and archiving.</li>
+                <li>Implemented logical indexing and metadata tagging strategies to enhance searchability and classification of vast document repositories.</li>
+                <li>Ensured data security and integrity through regular backups and adherence to established information management protocols.</li>
+                <li>Proficient in setting up and managing document control systems (e.g., local servers, SharePoint, proprietary systems).</li>
                 </ul>
             </div>
+	<div class="skills-box" data-aos="fade-up" data-aos-delay="500">
+    <p><strong>Client-Specific Platforms & Document Control Standards</strong></p>
+    <ul>
+        <li>Extensively worked with client-specific platforms such as PDLM, FCTS, and APMS to manage document workflows and ensure compliance with project protocols.</li>
+        <li>Maintained accurate document registers and audit trails in alignment with client submission formats, coding structures, and metadata requirements.</li>
+        <li>Coordinated document reviews, approvals, and transmittals according to client-defined workflows, timelines, and contractual obligations.</li>
+        <li>Provided guidance to internal teams on the use of client portals and ensured error-free submissions across all document stages.</li>
+    </ul>
         </div>
     </div>
 
@@ -560,35 +569,41 @@
         </div>
     </div>
 
-    <div class="section-box" data-aos="fade-up" data-aos-delay="100">
-        <h3 id="hobbies-interests" class="section-heading">Hobbies and Interests</h3>
-        <div class="section-content skills-content">
-            <div class="skills-box" data-aos="fade-up" data-aos-delay="200">
-                <p><strong>Reading</strong></p>
-                <p>Through the written word, I embark on endless journeys, exploring diverse realms of thought and emotion. Each book becomes a portal, broadening my perspective and igniting my imagination.</p>
-            </div>
-
-            <div class="skills-box" data-aos="fade-up" data-aos-delay="300">
-                <p><strong>Quest for Knowledge</strong></p>
-                <p>With an insatiable curiosity, I delve into uncharted territories of understanding. Embracing each lesson as a treasure, I forge a path towards continuous growth and enlightenment.</p>
-            </div>
-
-            <div class="skills-box" data-aos="fade-up" data-aos-delay="400">
-                <p><strong>Cooking</strong></p>
-                <p>If I suffer from anxiety or low moods, cooking could help increase my happiness.</p>
-            </div>
-
-            <div class="skills-box" data-aos="fade-up" data-aos-delay="500">
-                <p><strong>Drawing</strong></p>
-                <p>Drawing helps me discover, reflect on, and express myself. It helps me learn about myself. It helps me feel more happy and confident.</p>
-            </div>
-
-            <div class="skills-box" data-aos="fade-up" data-aos-delay="600">
-                <p><strong>Photography</strong></p>
-                <p>Photography encompasses far more than mere image capture. It cultivates conceptual acumen and technical mastery, while also imparting the art of collaboration. Feel free to explore my Instagram page to peruse the collection of photographs I've captured.</p>
-            </div>
+   <div class="section-box" data-aos="fade-up" data-aos-delay="100">
+    <h3 id="hobbies-interests" class="section-heading">Hobbies and Interests</h3>
+    <div class="section-content skills-content">
+        <div class="skills-box" data-aos="fade-up" data-aos-delay="200">
+            <p><strong>Reading</strong></p>
+            <p>Reading opens up infinite worlds, allowing me to explore diverse thoughts, cultures, and emotions. Each book becomes a portal that broadens my perspective and sparks my imagination.</p>
         </div>
+
+        <div class="skills-box" data-aos="fade-up" data-aos-delay="300">
+            <p><strong>Quest for Knowledge</strong></p>
+            <p>Driven by curiosity, I continuously seek to learn and grow. I embrace new ideas and experiences as opportunities to expand my understanding and evolve both personally and professionally.</p>
+        </div>
+
+        <div class="skills-box" data-aos="fade-up" data-aos-delay="400">
+            <p><strong>Cooking</strong></p>
+            <p>Cooking is a joyful and therapeutic activity for me. It helps lift my mood, reduces stress, and allows me to express creativity through flavors and presentation.</p>
+        </div>
+
+        <div class="skills-box" data-aos="fade-up" data-aos-delay="500">
+            <p><strong>Drawing</strong></p>
+            <p>Drawing is a form of self-expression and reflection. It allows me to explore my thoughts visually, bringing a sense of calm, clarity, and confidence.</p>
+        </div>
+
+        <div class="skills-box" data-aos="fade-up" data-aos-delay="600">
+            <p><strong>Photography</strong></p>
+            <p>Photography is more than capturing moments—it's about telling stories, observing details, and honing technical skills. It encourages creativity, patience, and collaboration. Feel free to explore my Instagram to see some of my work.</p>
+        </div>
+<div class="skills-box" data-aos="fade-up" data-aos-delay="700">
+    <p><strong>Listening to Music</strong></p>
+    <p>Music is my constant companion—whether it’s the timeless classics of the 60s, 70s, and 80s or the latest chart-toppers. I enjoy a diverse range of genres and languages, from Hindi, English, and Malayalam to Tamil. Music lifts my spirits, stirs memories, and enhances every mood and moment.</p>
+</div>
+
     </div>
+</div>
+
 
     <h3 id="qualification" data-aos="fade-up">Academic Qualifications & Achievements</h3>
     <p data-aos="fade-up" data-aos-delay="100"><strong>Qualification:</strong> Bachelor's Degree in Philosophy from Sree Sankaracharya University</p>
