--- a/index.html
+++ b/index.html
@@ -577,10 +577,11 @@
             <p>Reading opens up infinite worlds, allowing me to explore diverse thoughts, cultures, and emotions. Each book becomes a portal that broadens my perspective and sparks my imagination.</p>
         </div>
 
-        <div class="skills-box" data-aos="fade-up" data-aos-delay="300">
-            <p><strong>Quest for Knowledge</strong></p>
-            <p>Driven by curiosity, I continuously seek to learn and grow. I embrace new ideas and experiences as opportunities to expand my understanding and evolve both personally and professionally.</p>
-        </div>
+       <div class="skills-box" data-aos="fade-up" data-aos-delay="300">
+    <p><strong>Quest for Knowledge</strong></p>
+    <p>Driven by curiosity, I continuously seek to learn and grow. I embrace new ideas and experiences as opportunities to expand my understanding and evolve both personally and professionally. Recently, I’ve been exploring the practical use of Artificial Intelligence—leveraging tools like ChatGPT for smarter workflows, decision-making, content creation, and learning. Integrating AI into daily life not only enhances productivity but also opens exciting pathways for innovation and continuous improvement.</p>
+</div>
+
 
         <div class="skills-box" data-aos="fade-up" data-aos-delay="400">
             <p><strong>Cooking</strong></p>
