--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kishor Sankaran - Document Management Expert</title>
 
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
     <style>
@@ -330,18 +331,30 @@
             margin-bottom: 20px; /* Space below the text */
         }
 
+        /* UPDATED: LinkedIn Link Styling */
         .linkedin-link {
             color: #007bff; /* LinkedIn link color */
             text-decoration: none; /* Remove underline */
             font-weight: bold;
-            display: inline-block; /* Allows padding/margin */
+            display: inline-flex; /* Use flexbox to easily align icon and text */
+            align-items: center; /* Vertically center the icon and text */
             margin-top: 10px;
             transition: color 0.3s ease; /* Smooth hover effect */
+            /* Add some padding around the link if needed for a button-like feel, e.g., padding: 5px 10px; */
+            /* Optional: border-radius: 5px; */
         }
 
         .linkedin-link:hover {
             color: #0056b3; /* Darker blue on hover */
             text-decoration: underline; /* Underline on hover */
+            /* If you added button-like styling, you might want a background change on hover */
+            /* background-color: rgba(0, 123, 255, 0.1); */
+        }
+
+        /* NEW: Specific styling for the SVG icon within the link */
+        .linkedin-link svg {
+            margin-right: 8px; /* Space between icon and text */
+            /* Any other specific styling for the SVG if needed */
         }
 
         /* NEW: Style for the "New" tag on Blogs button */
@@ -472,45 +485,47 @@
     </div>
 
     <div class="section-box" data-aos="fade-up" data-aos-delay="100">
-        <h3 id="skills" class="section-heading">Skills</h3>
+        <h3 id="skills" class="section-heading">Core Competencies & Technical Skills</h3>
         <div class="section-content skills-content">
             <div class="skills-box" data-aos="fade-up" data-aos-delay="200">
-                <p><strong>MS Excel</strong></p>
+                <p><strong>Microsoft Excel (Advanced Proficiency)</strong></p>
                 <ul>
-                <li>Designed and implemented complex task automation solutions using VBA Macros and Power Query, reducing manual data processing time.</li>
-                <li>Developed dynamic reports and dashboards with Pivot Tables and Slicers for efficient data analysis and stakeholder reporting.</li>
-                <li>Mastered advanced formula creation for sophisticated data manipulation and analysis.</li>
-                <li>Ensured data integrity and enhanced readability through precise data formatting and validation techniques.</li>
+                    <li>Designed and implemented complex task automation solutions using VBA Macros and Power Query, reducing manual data processing time by an estimated X%.</li>
+                    <li>Developed dynamic reports and dashboards with Pivot Tables and Slicers for efficient data analysis and stakeholder reporting.</li>
+                    <li>Mastered advanced formula creation (e.g., VLOOKUP, INDEX-MATCH, SUMIFS) for sophisticated data manipulation and analysis.</li>
+                    <li>Ensured data integrity and enhanced readability through precise data formatting and validation techniques.</li>
                 </ul>
             </div>
 
             <div class="skills-box" data-aos="fade-up" data-aos-delay="300">
-                <p><strong>Aconex</strong></p>
+                <p><strong>Aconex (Document Management System Expertise)</strong></p>
                 <ul>
-		<li>Expertly managed end-to-end document lifecycles on Aconex, ensuring project compliance.</li>
-                <li>Developed and optimized complex workflow configurations and process maps to streamline document review and approval cycles.</li>
-                <li>Proficient in mass uploading and superseding documents, maintaining version control and audit trails for critical project documentation.</li>
-                <li>Generated comprehensive reports on document status, overdue items, and communication flows to support project management decisions.</li>
+                    <li>Expertly managed end-to-end document lifecycles on Aconex, including RFI, Submittal, and Transmittal processes, ensuring project compliance.</li>
+                    <li>Developed and optimized complex workflow configurations and process maps to streamline document review and approval cycles.</li>
+                    <li>Proficient in mass uploading and superseding documents, maintaining version control and audit trails for critical project documentation.</li>
+                    <li>Generated comprehensive reports on document status, overdue items, and communication flows to support project management decisions.</li>
+                    <li>Configured and maintained mailing (distribution) groups, ensuring efficient and accurate dissemination of information to relevant project stakeholders.</li>
                 </ul>
             </div>
 
             <div class="skills-box" data-aos="fade-up" data-aos-delay="400">
-                <p><strong>Computer Database</strong></p>
+                <p><strong>Computer Database Management & Information Systems</strong></p>
                 <ul>
-                <li>Designed and maintained robust digital filing systems and comprehensive computer databases for rapid document retrieval and archiving.</li>
-                <li>Implemented logical indexing and metadata tagging strategies to enhance searchability and classification of vast document repositories.</li>
-                <li>Ensured data security and integrity through regular backups and adherence to established information management protocols.</li>
-                <li>Proficient in setting up and managing document control systems (e.g., local servers, SharePoint, proprietary systems).</li>
+                    <li>Designed and maintained robust digital filing systems and comprehensive computer databases for rapid document retrieval and archiving.</li>
+                    <li>Implemented logical indexing and metadata tagging strategies to enhance searchability and classification of vast document repositories.</li>
+                    <li>Ensured data security and integrity through regular backups and adherence to established information management protocols.</li>
+                    <li>Proficient in setting up and managing document control systems (e.g., local servers, SharePoint, proprietary systems).</li>
                 </ul>
             </div>
-	<div class="skills-box" data-aos="fade-up" data-aos-delay="500">
-    <p><strong>Client-Specific Platforms & Document Control Standards</strong></p>
-    <ul>
-        <li>Extensively worked with client-specific platforms such as PDLM, FCTS, and APMS to manage document workflows and ensure compliance with project protocols.</li>
-        <li>Maintained accurate document registers and audit trails in alignment with client submission formats, coding structures, and metadata requirements.</li>
-        <li>Coordinated document reviews, approvals, and transmittals according to client-defined workflows, timelines, and contractual obligations.</li>
-        <li>Provided guidance to internal teams on the use of client portals and ensured error-free submissions across all document stages.</li>
-    </ul>
+            <div class="skills-box" data-aos="fade-up" data-aos-delay="500">
+                <p><strong>Client-Specific Platforms & Document Control Standards</strong></p>
+                <ul>
+                    <li>Extensively worked with client-specific platforms such as PDLM, FCTS, and APMS to manage document workflows and ensure compliance with project protocols.</li>
+                    <li>Maintained accurate document registers and audit trails in alignment with client submission formats, coding structures, and metadata requirements.</li>
+                    <li>Coordinated document reviews, approvals, and transmittals according to client-defined workflows, timelines, and contractual obligations.</li>
+                    <li>Provided guidance to internal teams on the use of client portals and ensured error-free submissions across all document stages.</li>
+                </ul>
+            </div>
         </div>
     </div>
 
@@ -578,9 +593,9 @@
         </div>
 
        <div class="skills-box" data-aos="fade-up" data-aos-delay="300">
-    <p><strong>Quest for Knowledge</strong></p>
-    <p>Driven by curiosity, I continuously seek to learn and grow. I embrace new ideas and experiences as opportunities to expand my understanding and evolve both personally and professionally. Recently, I’ve been exploring the practical use of Artificial Intelligence—leveraging tools like ChatGPT for smarter workflows, decision-making, content creation, and learning. Integrating AI into daily life not only enhances productivity but also opens exciting pathways for innovation and continuous improvement.</p>
-</div>
+        <p><strong>Quest for Knowledge</strong></p>
+        <p>Driven by curiosity, I continuously seek to learn and grow. I embrace new ideas and experiences as opportunities to expand my understanding and evolve both personally and professionally. Recently, I’ve been exploring the practical use of Artificial Intelligence—leveraging tools like ChatGPT for smarter workflows, decision-making, content creation, and learning. Integrating AI into daily life not only enhances productivity but also opens exciting pathways for innovation and continuous improvement.</p>
+        </div>
 
 
         <div class="skills-box" data-aos="fade-up" data-aos-delay="400">
@@ -597,10 +612,10 @@
             <p><strong>Photography</strong></p>
             <p>Photography is more than capturing moments—it's about telling stories, observing details, and honing technical skills. It encourages creativity, patience, and collaboration. Feel free to explore my Instagram to see some of my work.</p>
         </div>
-<div class="skills-box" data-aos="fade-up" data-aos-delay="700">
-    <p><strong>Listening to Music</strong></p>
-    <p>Music is my constant companion—whether it’s the timeless classics of the 60s, 70s, and 80s or the latest chart-toppers. I enjoy a diverse range of genres and languages, from Hindi, English, and Malayalam to Tamil. Music lifts my spirits, stirs memories, and enhances every mood and moment.</p>
-</div>
+        <div class="skills-box" data-aos="fade-up" data-aos-delay="700">
+            <p><strong>Listening to Music</strong></p>
+            <p>Music is my constant companion—whether it’s the timeless classics of the 60s, 70s, and 80s or the latest chart-toppers. I enjoy a diverse range of genres and languages, from Hindi, English, and Malayalam to Tamil. Music lifts my spirits, stirs memories, and enhances every mood and moment.</p>
+        </div>
 
     </div>
 </div>
@@ -635,9 +650,14 @@
             <blockquote class="recommendation-text">
                 "I was employed as a Projects Director by Messrs QBS in Qatar for several projects including commencing in 2014 through to the end of 2016. Mr Sankaran was employed to manage the office administration and document control for the company’s flagship projects. I got to know Kishor very well during this time and found him to be extremely capable, diligent and efficient. He showed a great understanding of the company’s site management systems and the interaction with the wider company systems and those of the Supervision Consultants and Project Management Consultants employed by the Client. His department was subject to numerous audits, internally and externally, and were always confirmed to be of the highest standards. He is a very personable and gets on very well with his colleagues. He has all the technical and administrative skills required for this type of work. I would have no hesitation in recommending Kishor for any similar role and consider that he talents were underutilized and is capable of taking on much more responsibility. I commend him without reservation."
             </blockquote>
-            <a href="https://www.linkedin.com/in/kishor-sankaran-30649612b/details/recommendations/?detailScreenTabIndex=0" target="_blank" class="linkedin-link">View on LinkedIn</a>
+            <a href="https://www.linkedin.com/in/kishor-sankaran-30649612b/details/recommendations/?detailScreenTabIndex=0" target="_blank" class="linkedin-link">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="20" height="20" fill="currentColor" style="vertical-align: middle; margin-right: 8px;">
+                    <path d="M20.447 20.452h-3.554v-5.569c0-1.325-.028-3.044-1.854-3.044-1.854 0-2.131 1.444-2.131 2.946v5.667H9.159V9h3.414v1.561h.046c.477-.9 1.637-1.854 3.37-1.854 3.606 0 4.267 2.365 4.267 5.455v6.286zM5.337 7.248a2.535 2.535 0 01-2.536-2.534c0-1.409 1.125-2.534 2.536-2.534s2.536 1.125 2.536 2.534c0 1.409-1.125 2.534-2.536 2.534zm-1.765 13.204H7.102V9H3.572v11.452h.001z" fill="currentColor"/>
+                </svg>
+                View on LinkedIn
+            </a>
         </div>
-        </section>
+    </section>
 
     <h3 id="blogs" data-aos="fade-up">Blogs</h3>
     <div style="text-align: center; margin-top: 20px;" data-aos="fade-up" data-aos-delay="100">
@@ -670,17 +690,14 @@
                 button.addEventListener("click", function(event) {
                     event.preventDefault();
                     const targetId = button.getAttribute("href");
-                    const targetElement = document.querySelector(targetId);
-                    if (targetElement) {
-                        // Calculate offset for smooth scrolling, accounting for sticky header
-                        const headerHeight = document.querySelector(".main-heading-buttons").offsetHeight;
-                        const targetOffset = targetElement.getBoundingClientRect().top + window.scrollY;
-                        const yOffset = targetOffset - headerHeight - 10; // Adjust 10px for a little padding
-
-                        window.scrollTo({
-                            top: yOffset,
-                            behavior: "smooth"
-                        });
+                    if (targetId && targetId !== "javascript:void(0);" && targetId.startsWith("#")) {
+                        const targetSection = document.querySelector(targetId);
+                        if (targetSection) {
+                            window.scrollTo({
+                                top: targetSection.offsetTop,
+                                behavior: "smooth"
+                            });
+                        }
                     }
                 });
             });
